--- a/randblock/templates/index.html
+++ b/randblock/templates/index.html
@@ -1,1 +1,7 @@
-hey
+{% extends "wrapper.html" %}
+
+{% block content %}
+    {% with grid = grid, cell_width = 40, cell_height = 40 %}
+        {% include "grid.html" %}
+    {% endwith %}
+{% endblock %}
