--- a/randblock/templates/wrapper.html
+++ b/randblock/templates/wrapper.html
@@ -4,6 +4,18 @@
         border: 1px solid black;
         background-color: gray;
     }
+    .container .cells-container {
+        position: relative;
+        z-index: 1;
+    }
+    .container .blocks-container {
+        position: relative;
+        z-index: 2;
+    }
+    .container .cell {
+        border: 1px solid black;
+    }
+    .container .cell,
     .container .block {
         position: absolute;
     }
