--- a/randblock/templates/wrapper.html
+++ b/randblock/templates/wrapper.html
@@ -18,6 +18,8 @@
     .container .cell,
     .container .block {
         position: absolute;
+        background-size: cover;
+        display: block;
     }
 </style>
 
